[gd_scene load_steps=6 format=3 uid="uid://btglmx5p233s4"]

[ext_resource type="Texture2D" uid="uid://cupg0o8lvh8h5" path="res://icon.svg" id="1_6pm1k"]
[ext_resource type="Script" path="res://scripts/EnemyHealth.gd" id="1_il4hb"]
[ext_resource type="Script" path="res://scenes/enemy/Enemy.gd" id="1_op2v8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cweic"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmm5x"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_op2v8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.90735e-06, -1.90735e-06)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_6pm1k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cweic")

[node name="EnemyHealth" type="Node" parent="."]
script = ExtResource("1_il4hb")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_qmm5x")
debug_color = Color(1, 0.258824, 0.317647, 0.419608)

[node name="AttackCheckTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
